# CDPL

./: .gitignore  CDPL.h  CMakeLists.txt  README.md  build.sh  kdp.h  makefile  req.h
FIFO_buffer/: main.cpp
eval-test/: main.cpp
examples/concurrent/FIFO-buffer/: main.cpp
examples/concurrent/H2O/: main.cpp
examples/concurrent/dining-philosophers/: main.cpp
examples/concurrent/h2o/: main.cpp
examples/concurrent/one-lane-bridge/: main.cpp
examples/concurrent/one_lane_bridge/: main.cpp
examples/concurrent/river-crossing/: main.cpp
examples/concurrent/timer/: main.cpp
examples/linda/basics/: main.cpp
examples/linda/cigarette-smokers/: main.cpp
examples/linda/dining-philosophers/: main.cpp
examples/linda/missing-id/: main.cpp
examples/linda/producer-consumer/: main.cpp
examples/mpi/old-bridge/: main.cpp
examples/mpi/old_bridge/: main.cpp
h2o/: main.cpp
include/: cdpl.h
include/cdpl/: concurrent.h  linda.h  mpi.h  utils.h
include/cdpl/concurrent/: atomic.h  mutex.h  semaphore.h  thread.h
include/cdpl/utils/: colorize.h  common.h
one_lane_bridge/: main.cpp
river_crossing/: main.cpp
test/: test.cpp
test/concurrent/: thread.h
tests/linda/eval-test/: main.cpp
tests/linda/linda-test/: main.cpp
tests/mpi/buffer-test/: main.cpp
timer/: main.cpp
